// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";

// The greeting service definition.
service RemoteGeometry {
  rpc CreateSheetCircle(CreateSheetCircleRequest) returns (ObjectID) {}
}

message CreateSheetCircleRequest {
  Vector centre = 1;
  Vector normal = 2;
  double radius = 3;
}

message ObjectID {
  string id = 1;
}


message Vector {
  double x = 1;
  double y = 2;
  double z = 3;
}
